...
                android:text="Search" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shopping List" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Conversion" />
...
                android:text="Filter" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/byIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="By Ingredient" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
...
